特定のuseridを登録できないようにQ&Aのパスを変更

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,9 +8,9 @@
           <div class="userdata">
             <div class="userpic">
               <% if @user.image.nil? %>
-                <%= image_tag "default_icon", :size => '100x100', class: "userpicimg icon flex-shrink-0 show-icon" %>
+                <%= image_tag "default_icon", :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon" %>
               <% else %>
-                <%= image_tag "/user_images/#{@user.image}", style: "width: 100px;height:100px;", class: "userpicimg icon bd-placeholder-img flex-shrink-0 show-icon" %>
+                <%= image_tag "/user_images/#{@user.image}", style: "width: 100px;height:100px;", class: "userpicimg icon bd-placeholder-img flex-shrink-0 question-icon" %>
               <% end %>
             </div>
             <div class="names">
