--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to users_setting_path, class: "link" do %>
+                  <%= link_to setting_path, class: "link" do %>
                     <span class="link nav-link">設定</span>
                   <% end %>
                 </li>
@@ -125,7 +125,7 @@
         <p class="mb-1 small"><%= link_to "Amicaについて", about_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "利用規約", static_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "プライバシーポリシー", privacy_path, class: "text-decoration-none text-light" %></p>
-        <p class="mb-1 small"><%= link_to "Q&A", page_path(current_user.nickname), class: "text-decoration-none text-light" %></p>
+        <p class="mb-1 small"><%= link_to "Q&A", faq_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "ヘルプ", about_path, class: "text-decoration-none text-light" %></p>
       </div>
       <div class="col mt-3">
