通知機能 通知ボタンを押したら通知ページにとべるようにパスを通した。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           <div class="navbar-nav me-auto m-0 mb-lg-0"></div>
           <ul class="navbar-nav d-flex">
             <li class="nav-item">
-              <%= link_to pages_path, class: "icons nav-link" do %>
+              <%= link_to notifications_path, class: "icons nav-link" do %>
                 <i class="fas fa-bell"></i>通知<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
               <% end %>
             </li>
