通知機能 通知ボタンを押したら通知ページにとべるようにパスを通した。追加

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,1 +1,10 @@
+<h3 class="text-center">通知</h3>
+<%= link_to "通知削除", notifications_path(@notifications), method: :delete ,class: "fas fa-trash" %>
+<% if @notifications.exists? %>
+  <div class="notification-index">
+    <%= render @notifications %>
+  </div>
+<% else %>
+  <p>通知はありません</p>
+<% end %>
 <p>通知内容</p>
