運営からのメッセージ機能　やるべきこと投稿フォーム作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <div class="navbar-nav me-auto m-0 mb-lg-0"></div>
           <ul class="navbar-nav d-flex">
             <li class="nav-item">
-              <%= link_to operation_message_index_path, class: "icons nav-link" do %>
+              <%= link_to operation_messages_path, class: "icons nav-link" do %>
                 <i class="fas fa-exclamation-circle"></i>お知らせ<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
               <% end %>
               <%= link_to pages_path, class: "icons nav-link" do %>
