--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,17 +1,33 @@
+<%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
 
+  <h1 class="m-3">
+    <% if @invited_user .image.nil? %>
+    <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+    <% else %>
+    <%= image_tag "/user_images/#{  @invited_user .image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+    <% end %>
+    <%=  @invited_user.name %>Chat room
+  </h1>
 
-<h1><%=  @invited_user.name %>Chat room</h1>
-<div id="messages">
-<% @message.each do |p| %>
-    <div class="my-3 p-3 bg-white rounded shadow-sm">
-      <%= render 'chats/chat_message',message:p %>
+<div id="body" class="m-4">
+    <div id="messages">
+      <% @message.each do |p| %>
+           <%= render 'chats/chat_message',message:p %>
+      <% end %>
+      <div id="append"></div>
+      <div class="clear"></div>
     </div>
-<% end %>
-<div id="append"></div>
-
-
-<%= label_tag :content, 'Say something:' %>
-<input type="hidden" id="room_id" value= <%= @room_id %> data-behavior="chat_speaker">
-  <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
-<%= text_field_tag :content, nil,data: {behavior: "chat_speaker"} %>
 </div>
+
+      <div class="mt-2 row messageBox reply">
+        <div class="col-sm-12 messageBox-inner">
+           <input type="hidden" id="room_id" value= <%= @room_id %> data-behavior="chat_speaker">
+           <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
+           <%= text_field_tag  :content, nil, class:"form-control", placeholder:"message", data: {behavior: "chat_speaker"} %>
+        </div>
+      </div>
+
+
+
+
+
