--- a/app/views/timelines/pickup.html.erb
+++ b/app/views/timelines/pickup.html.erb
@@ -17,10 +17,9 @@
 
 
 <div class="container">
-  まだ完成してないこのページ
   <%= render "timelines/form", create:@create %>
   <% @posts.each do |p| %>
-    <% if following?(@user.followings_list,p.user) || p.user == current_user %>
+    <% unless p.user == current_user %>
       <%= link_to timeline_path(p.id) do %>
         <div class="my-3 p-3 bg-white rounded shadow-sm">
           <div id="post_<%= p.id %>">
