--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -29,11 +29,9 @@
 }
 
 .reply {
-  position: fixed;
-  z-index: 1000;
   bottom: 0;
   left:0;
-  height: 60px;
+  height: auto;
   width: 100%;
   background-color: #f5f1ee;
   padding: 10px 5px 10px 5px !important;
@@ -49,4 +47,10 @@
   font-size: 12px;
   word-wrap: break-word;
   border: 1px solid #C6C6C6;
+}
+
+.userinfo{
+  position: fixed;
+  top: 10%;
+  left:0;
 }
