q&aにアクセスできない不具合の修正

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -14,7 +14,7 @@
             <span class="badge badge-pink badge-icon badge-fw pull-left"></span><%= link_to "プライバシーポリシー", privacy_path %>
           </p>
           <p class="list-group-item">
-            <span class="badge badge-success badge-icon badge-fw pull-left"></span><%= link_to "Q&A", page_path(current_user.nickname) %>
+            <span class="badge badge-success badge-icon badge-fw pull-left"></span><%= link_to "Q&A", faq_path %>
           </p>
           <p class="list-group-item">
             <span class="badge badge-warning badge-icon badge-fw pull-left"></span><%= link_to "ヘルプ", about_path %></p>
