--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -4,7 +4,7 @@
     <div class="row message-body">
       <div class="col-sm-12 message-main-sender">
         <div class="sender my-1 p-1">
-          <div class="messages" style="text-align: right">
+          <div class="messages">
             <%= message.content %></p>
           </div>
         </div>
