コミュニティのレイアウトを大幅変更

--- a/app/views/communities/_index.html.erb
+++ b/app/views/communities/_index.html.erb
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2  row-cols-xl-3 row-cols-xxl-4 g-4　g-lg-4　p-3　my-3" id="community">
+  <div class="row row-cols-xs-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 row-cols-xxl-4">
     <%= render partial: 'communities/community', collection: @community, as: :community %>
   </div>
 
