--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -5,7 +5,7 @@
       <div class="col-sm-12 message-main-sender">
         <div class="sender my-1 p-1">
           <div class="messages">
-            <%= message.content %></p>
+            <%=safe_join(message.content.split("\n"),tag(:br))%>
           </div>
         </div>
       </div>
@@ -15,7 +15,7 @@
       <div class="col-sm-12 message-main-receiver">
         <div class="receiver my-1 p-1">
           <div class="messages">
-            <%= message.content %></p>
+            <%=safe_join(message.content.split("\n"),tag(:br))%>
           </div>
         </div>
       </div>
