チャットの最新順にindexを並べ替える機能実装

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -74,3 +74,22 @@
   line-height: 20px;
   resize: none;
 }
+
+.chat_heading{
+  margin-left: 3%;
+  position: relative;
+  padding: 0.6em;
+  background: #e0edff;
+  display: inline-block;
+}
+
+.chat_heading:after {
+  position: absolute;
+  content: '';
+  top: 100%;
+  left: 30%;
+  border: 15px solid transparent;
+  border-top: 15px solid #e0edff;
+  width: 0;
+  height: 0;
+}
