--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<h1>Chat</h1>
+<h4 class="chat_heading">Chat</h4>
 <div class="m-3">
 <% num = 0
    while num < @room_partner.size do %>
