チャット催促メッセージを開始ボタン押した側と押された側で変化＆手直し

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -4,28 +4,31 @@
 <div class="m-3">
 <% num = 0
    while num < @room_partner.size do %>
-    <div class="container">
-        <%= link_to chat_path(@room_partner[num].userid) ,style:" text-decoration:none;" do %>
-          <div class="my-3 p-3 bg-white rounded shadow-sm">
-            <div class="d-flex pt-3">
-              <% if @room_partner[num].image.nil? %>
-                <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-              <% else %>
-                <%= image_tag "/user_images/#{ @room_partner[num].image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-              <% end %>
-              <p class="pb-3 mb-0  border-bottom w-100">
-                <strong class="d-block" style="color: black"><%= @room_partner[num].name %> (<%= @room_partner[num].nickname %>)</strong>
-                <% if @latest_message[num] === '' %>
-                  <span class="medium lh-sm" style="float: right;color: black">※このユーザーとはまだ会話したことがないようです！会話してみましょう！※</span>
-                  <span class="clear"></span>
+      <div class="container">
+          <%= link_to chat_path(@room_partner[num].userid) ,style:" text-decoration:none;" do %>
+            <div class="my-3 p-3 bg-white rounded shadow-sm">
+              <div class="d-flex pt-3">
+                <% if @room_partner[num].image.nil? %>
+                  <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
                 <% else %>
-                  <span class="text-muted medium lh-sm"> <%= @latest_message[num] %></span>
+                  <%= image_tag "/user_images/#{ @room_partner[num].image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
                 <% end %>
-              </p>
+                <p class="pb-3 mb-0  border-bottom w-100">
+                  <strong class="d-block" style="color: black"><%= @room_partner[num].name %> (<%= @room_partner[num].nickname %>)</strong>
+                  <% if @latest_message[num] === '' %>
+                    <span class="medium lh-sm" style="float: right;color: black">※このユーザーとはまだ会話したことがないようです！会話してみましょう！※</span>
+                    <span class="clear"></span>
+                  <% elsif @latest_message[num] === nil %>
+                    <span class="medium lh-sm" style="float: right;color: black">※このユーザーがあなたと会話したいようです！会話してみましょう！※</span>
+                    <span class="clear"></span>
+                  <% else %>
+                    <span class="text-muted medium lh-sm"> <%= @latest_message[num] %></span>
+                  <% end %>
+                </p>
+              </div>
             </div>
-          </div>
-        <% end %>
-    </div>
+          <% end %>
+      </div>
    <% num = num + 1 %>
 <% end %>
 
