各メッセージの送信時刻を表示

--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -9,6 +9,11 @@
           </div>
         </div>
       </div>
+      <% if message.created_at.to_date === Date.today %>
+        <span class="text-gray small" style="text-align: right"><%= message.created_at.strftime("今日 %H:%M") %></span>
+      <% else %>
+        <span class="text-gray small" style="text-align: right"><%= message.created_at.strftime("%m月%d日") %></span>
+      <% end %>
     </div>
   <% else %>
     <div class="row message-body">
@@ -19,5 +24,10 @@
           </div>
         </div>
       </div>
+      <% if message.created_at.to_date === Date.today %>
+        <span class="text-gray small"><%= message.created_at.strftime("今日 %H:%M") %></span>
+      <% else %>
+        <span class="text-gray small"><%= message.created_at.strftime("%m月%d日") %></span>
+      <% end %>
     </div>
   <% end %>
