--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -1,25 +1,28 @@
-<%= stylesheet_link_tag "community_index" %>
-<div class="community">
-<%= link_to community_path(community.id), class: "text-dark", style: "text-decoration: none" do %>
-  <div class="col">
-    <div class="carbon-example flex-wrapper">
-      <% if community.icon? %>
-        <%= image_tag "/communities_image/#{community.icon}", class: "img-fluid", style: "width:200px" %><br>
-      <% else %>
-        <%= image_tag "default_icon", style: "width:200px" %><br>
-      <% end %>
-      <div class="inner-wrapper text-center w-100">
-        <h5><%= community.name %> </h5>
-        <p class="my-0 fine-print"> <i class="far fa-user fine-print"></i> <%= community.community_members.size %></p>
-        <% community.tags.pluck(:name).shuffle.first(3).each do |t| %>
-          <p class="my-0"><%= link_to "\##{t}",search_tag_path(t), class: "fine-print text-decoration-none"%></p>
-        <% end %>
-      </div>
-      <div class="inner-wrapper text-right w-25 h-auto" style="bottom: 0; left: 0;margin-bottom: 0;padding: 0;">
+<% unless community_ban?(community) %>
+  <%= stylesheet_link_tag "community_index" %>
+  <div class="community">
+    <%= link_to community_path(community.id), class: "text-dark", style: "text-decoration: none" do %>
+      <div class="col">
+        <div class="carbon-example flex-wrapper">
+          <% if community.icon? %>
+            <%= image_tag "/communities_image/#{community.icon}", class: "img-fluid", style: "width:200px" %><br>
+          <% else %>
+            <%= image_tag "default_icon", style: "width:200px" %><br>
+          <% end %>
+          <div class="inner-wrapper text-center w-100">
+            <h5><%= community.name %> </h5>
+            <p class="my-0 fine-print"><i class="far fa-user fine-print"></i> <%= community.community_members.size %>
+            </p>
+            <% community.tags.pluck(:name).shuffle.first(3).each do |t| %>
+              <p class="my-0"><%= link_to "\##{t}", search_tag_path(t), class: "fine-print text-decoration-none" %></p>
+            <% end %>
+          </div>
+          <div class="inner-wrapper text-right w-25 h-auto" style="bottom: 0; left: 0;margin-bottom: 0;padding: 0;">
 
-        <span class="small my-0" style="font-size: 13px"></span>
+            <span class="small my-0" style="font-size: 13px"></span>
+          </div>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 <% end %>
-</div>
