showのn+1問題の再来を撃退

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -34,7 +34,7 @@
     <div class="my-3 py-3">
       <h2 class="display-5 text-center">参加者</h2>
       <p class="mb-0"><%= link_to "リーダー : #{@leader.name}", profile_path(@leader.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
-      <% @community.community_members.shuffle.first(10).each do |m| %>
+      <% @community.community_members.includes(:user).shuffle.first(10).each do |m| %>
         <% unless @leader == m.user %>
           <p class="mb-0"><%= link_to "#{m.user.name}", profile_path(m.user.userid), class: "lead text-white", style: "text-decoration:none;" %></p>
         <% end %>
